# ChangeLog for net-wireless/aircrack-ng
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/ChangeLog,v 1.42 2009/04/09 22:02:44 arfrever Exp $

  09 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +files/aircrack-ng-1.0_rc3-respect_LDFLAGS.patch,
  aircrack-ng-1.0_rc3.ebuild:
  Respect LDFLAGS (bug #262959).

*aircrack-ng-1.0_rc3 (29 Mar 2009)

  29 Mar 2009; Patrick Lauer <patrick@gentoo.org>
  +aircrack-ng-1.0_rc3.ebuild:
  Bump to 1.0_rc3.

  19 Mar 2009; Joseph Jezak <josejx@gentoo.org>
  aircrack-ng-1.0_rc2-r1.ebuild:
  Marked ~ppc for bug #253803.

  15 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  aircrack-ng-1.0_rc2-r1.ebuild:
  Add ~arm wrt #253803

*aircrack-ng-1.0_rc2-r1 (12 Mar 2009)

  12 Mar 2009; Robert Buchholz <rbu@gentoo.org>
  +files/aircrack-ng-1.0_rc2-freebsd.patch, -aircrack-ng-1.0_rc2.ebuild,
  +aircrack-ng-1.0_rc2-r1.ebuild:
  Reintroduce iw as a dep on Linux that got dropped in the bump (bug # 260177),
  Improve support for current FreeBSD (bug #253803): applied some patches and
  remove airmon-ng application.

*aircrack-ng-1.0_rc2 (01 Mar 2009)

  01 Mar 2009; Patrick Lauer <patrick@gentoo.org>
  +files/sha-compile-fix-64bit.patch, +aircrack-ng-1.0_rc2.ebuild:
  Bump to 1.0_rc2, fixes #256545. Patch by toogle <commando2004@yandex.ru>.

*aircrack-ng-1.0_rc1 (05 Jan 2009)

  05 Jan 2009; Robert Buchholz <rbu@gentoo.org> +aircrack-ng-1.0_rc1.ebuild:
  Version bump, ebuild contributions by Dylan Scott, Alessandro Guido, Roel
  Aaij and Pierre Guinoiseau, bug #233285.

  22 Dec 2008; Marcelo Goes <vanquirius@gentoo.org>
  -aircrack-ng-0.9.1.ebuild, -aircrack-ng-0.9.2.ebuild:
  Remove old ebuilds.

  27 Sep 2008; Raúl Porcel <armin76@gentoo.org> aircrack-ng-0.9.3.ebuild:
  arm stable wrt #225241

  22 Jun 2008; <welp@gentoo.org> aircrack-ng-0.9.3.ebuild:
  Stable on amd64; bug 225241
