@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/aircrack-ng-1.0_rc3.ebuild,v 1.2 2009/04/09 22:02:44 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/aircrack-ng-1.0_rc3.ebuild,v 1.3 2009/04/25 17:18:07 arfrever Exp $
 
 EAPI=2
 inherit versionator eutils toolchain-funcs
@@ -38,15 +38,18 @@ src_prepare() {
 }
 
 src_compile() {
-	emake CC="$(tc-getCC)" LD="$(tc-getLD)" sqlite=$(have_sqlite) || die "emake failed"
+	# UNSTABLE=true enables building of buddy-ng, easside-ng, tkiptun-ng and wesside-ng
+	emake CC="$(tc-getCC)" LD="$(tc-getLD)" sqlite=$(have_sqlite) UNSTABLE=true || die "emake failed"
 }
 
 src_install() {
+	# UNSTABLE=true enables installation of buddy-ng, easside-ng, tkiptun-ng and wesside-ng
 	emake \
 		prefix="/usr" \
 		mandir="/usr/share/man/man1" \
 		DESTDIR="${ED}" \
 		sqlite=$(have_sqlite) \
+		UNSTABLE=true \
 		install \
 		|| die "emake install failed"
 
