@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/aircrack-ng
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/ChangeLog,v 1.42 2009/04/09 22:02:44 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/ChangeLog,v 1.43 2009/04/25 17:18:07 arfrever Exp $
+
+  25 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  aircrack-ng-1.0_rc3:
+  Install unstable tools (bug #267202).
 
   09 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   +files/aircrack-ng-1.0_rc3-respect_LDFLAGS.patch,
